# Passmanager

./: Cargo.toml  README.md
install/: install.sh
src/: main.rs  passutils.rs
