[package]
name = "passmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bcrypt = "0.15.1"
chrono = "0.4.38"
clap = {version="4.5.11", features=["derive"]}
copypasta = "0.10.1"
openssl = "0.10.66"
rand = {version = "0.8.5", features = ["getrandom"]}
rand_core = { version = "0.6.3", features = ["getrandom"] }
rpassword = "7.3.1"
serde_json = "1.0.120"
whoami = "1.5.1"
